syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mycompany.myapp.grpc";

import "google/protobuf/empty.proto";

package com.mycompany.myapp;

service ConfigurationPropertiesReportService {
    rpc GetConfigurationProperties(google.protobuf.Empty) returns (ConfigurationPropertiesReport);
}

message ConfigurationProperty {
    string prefix = 1;
    string properties = 2;
}

message ConfigurationPropertiesReport {
    ConfigurationPropertiesReport parent = 1;
    map<string, ConfigurationProperty> configuration_properties = 2;
}
